[package]
name = "verus_bash"
version = "0.1.0"
edition = "2024"

[dependencies]
vstd = { git = "https://github.com/verus-lang/verus", rev = "2496084"}
verus_builtin = { git = "https://github.com/verus-lang/verus", rev = "2496084"}
verus_builtin_macros = { git = "https://github.com/verus-lang/verus", rev = "2496084"}
